# vdocable

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.cjs
.github/workflows/: ci.yml  pages.yml  release.yml
audio-router/native-qt/: CMakeLists.txt  README.md  installer.nsi  portable-sfx-config.txt
audio-router/native-qt/include/router/app/: audio_route_publisher.h  source_info.h
audio-router/native-qt/include/router/ui/: main_window.h  route_widget.h
audio-router/native-qt/include/router/util/: router_text.h
audio-router/native-qt/include/router/webrtc/: audio_webrtc_client.h
audio-router/native-qt/qa/: build-release.ps1  release-and-publish.ps1  run-fast-gate.ps1  run-stability-gate.ps1  sign-artifacts.ps1  submit-virustotal.ps1
audio-router/native-qt/resources/: app.rc
audio-router/native-qt/src/: main.cpp
audio-router/native-qt/src/app/: audio_route_publisher.cpp
audio-router/native-qt/src/ui/: main_window.cpp  route_widget.cpp
audio-router/native-qt/src/util/: router_text.cpp
audio-router/native-qt/src/webrtc/: audio_webrtc_client.cpp
audio-router/native-qt/tests/: router_text_test.cpp
docs/: RELEASES.md  getting-started.html  index.html  styles.css
tests/docs/: site.spec.js
